<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".registration.LoginActivity" android:background="@android:color/white">


    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/tv_login" android:textSize="34sp" android:padding="12dp"
              android:textStyle="bold" android:textColor="@android:color/holo_red_dark" android:paddingTop="100dp"
              android:layout_marginTop="72dp"
              app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="24dp"
              app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
              android:id="@+id/textView"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:paddingLeft="10dp"
            android:id="@+id/edt_email_login" android:hint="@string/edt_email"
            android:drawableLeft="@drawable/mail_address_icon"
            android:drawablePadding="5dp"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="32dp"
            android:background="@drawable/rounded_edittext_register_login" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="72dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:inputType="textPassword"
            android:ems="10"
            android:paddingLeft="10dp"
            android:id="@+id/edt_password_login"
            android:hint="@string/edt_password" android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/password_icon"
            android:drawablePadding="5dp"
            app:layout_constraintTop_toBottomOf="@+id/edt_email_login"
            app:layout_constraintStart_toStartOf="@+id/edt_email_login"
            app:layout_constraintEnd_toEndOf="@+id/edt_email_login"
            android:background="@drawable/rounded_edittext_register_login"/>
    <Button
            android:text="@string/btn_login"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:id="@+id/btn_login_login"
            android:textColor="@android:color/white"
            android:drawableLeft="@drawable/login_icon"
            android:drawablePadding="-30dp"
            android:paddingLeft="10dp"
            android:background="@drawable/rounded_button" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/edt_password_login"
            app:layout_constraintEnd_toEndOf="@+id/edt_password_login"
            app:layout_constraintStart_toStartOf="@+id/edt_password_login"/>
    <TextView
            android:text="@string/tv_not_have_yet_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_nothaveyetanaccount_login" app:layout_constraintEnd_toEndOf="@+id/btn_login_login"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_login_login"
            android:textColor="@android:color/holo_blue_dark"/>
</android.support.constraint.ConstraintLayout>