<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".registration.RegisterActivity" android:background="@android:color/white">

    <EditText
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:paddingLeft="10dp"
            android:id="@+id/edt_username_register"
            android:hint="@string/edt_username"
            android:drawableLeft="@drawable/username_icone"
            android:drawablePadding="5dp"
            android:layout_marginStart="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="32dp" android:background="@drawable/rounded_edittext_register_login"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/btn_select_photo_register"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:paddingLeft="10dp"
            android:id="@+id/edt_email_register"
            android:hint="@string/edt_email" android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/mail_address_icon"
            android:drawablePadding="5dp"
            app:layout_constraintTop_toBottomOf="@+id/edt_username_register"
            app:layout_constraintStart_toStartOf="@+id/edt_username_register"
            app:layout_constraintEnd_toEndOf="@+id/edt_username_register"
            android:background="@drawable/rounded_edittext_register_login"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:inputType="textPassword"
            android:ems="10"
            android:paddingLeft="10dp"
            android:id="@+id/edt_password_register"
            android:hint="@string/edt_password"
            android:drawableLeft="@drawable/password_icon"
            android:drawablePadding="5dp"
            app:layout_constraintEnd_toEndOf="@+id/edt_email_register"
            app:layout_constraintStart_toStartOf="@+id/edt_email_register" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edt_email_register"
            android:background="@drawable/rounded_edittext_register_login"/>
    <Button
            android:text="@string/btn_register"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:drawableLeft="@drawable/save_icon"
            android:drawablePadding="-30dp"
            android:paddingLeft="10dp"
            android:textColor="@android:color/white"
            android:background="@drawable/rounded_button"
            android:id="@+id/btn_register_register" app:layout_constraintEnd_toEndOf="@+id/edt_password_register"
            app:layout_constraintStart_toStartOf="@+id/edt_password_register"
            app:layout_constraintTop_toBottomOf="@+id/edt_password_register" android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/tv_already_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_dark"
            android:id="@+id/tv_alreadyregister_register" app:layout_constraintEnd_toEndOf="@+id/btn_register_register"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_register_register"/>
    <Button
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/btn_select_photo_register" android:text="@string/btn_select_photo"
            android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp" android:background="@drawable/rounded_bouton_select_photo"
            android:textColor="@color/colorPrimary"/>

    <de.hdodenhof.circleimageview.CircleImageView android:layout_width="150dp"
                                                  android:layout_height="150dp"
                                                  app:layout_constraintEnd_toEndOf="@+id/btn_select_photo_register"
                                                  app:layout_constraintTop_toTopOf="@+id/btn_select_photo_register"
                                                  app:layout_constraintBottom_toBottomOf="@+id/btn_select_photo_register"
                                                  app:layout_constraintStart_toStartOf="@+id/btn_select_photo_register"
                                                  android:id="@+id/selectphoto_imageview_register"/>
</android.support.constraint.ConstraintLayout>